--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -2,3 +2,7 @@ PORT=your_port
 MONGO_URI=your_mongodb_connection_string_here
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+FRONTEND_BASE_URL=your_frontend_url
