Add changes at index.js

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend"
+    "build": "npm install --prefix Backend && npm install --prefix Frontend && npm run build --prefix Brontend",
+    "start": "npm run start --prefix Backend"
   }
 }
