--- a/package.json
+++ b/package.json
@@ -2,19 +2,12 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://github.com/soubhik09/Chat-App#readme",
-  "bugs": {
-    "url": "https://github.com/soubhik09/Chat-App/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/soubhik09/Chat-App.git"
-  },
-  "license": "ISC",
-  "author": "",
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix Backend && npm install --prefix Frontend && npm run build --prefix Frontend",
     "start": "npm run start --prefix Backend"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
